# stanford-law-hackathon

./: diff_utils.py  document_parser.py  main.py  openai_integration.py  pasted_text_1725742968908.txt  pyproject.toml
static/css/: styles.css
static/js/: main.js
static/word-add-in/: app.js  index.html  manifest.xml  styles.css
templates/: index.html
